# snafu-virtstack

./: Cargo.toml  README.md  ai-prompt.md
.github/workflows/: clippy.yml  release.yml
virtstack/: Cargo.toml
virtstack/src/: lib.rs
virtstack_macro/: Cargo.toml
virtstack_macro/src/: lib.rs
